# scb

./: .gitignore  Cargo.toml  config.json  main.py  readme.md  scb
.github/workflows/: rust.yml
src/: commands.rs  file.rs  main.rs  tests.rs
tests/: main.rs
